# attratian_chatbot

./: .gitignore  .req_hash  README.md  STRUCTURE_IMPROVEMENT_PLAN.md  app.py  convert_to_json_hierarchy.py  debug_api_mode.py  debug_content_fetch.py  debug_gemini.py  debug_output.txt  debug_step2_step5.py  debug_step5_truncation.py  enhanced_json_extractor.py  pyproject.toml  requirements.txt  run.ps1  start_bot.bat  start_bot.ps1  test_cql_detailed_process.py  test_keyword_fix.py  test_login_spec_quality.py  test_prompt_quality.py  test_step1_step2_step3_step4.py  test_streaming.py
_dev_experiments/: api_logging_enhancement_plan.md  export_confluence_structure.py  test_accordion_streaming.py  test_enhanced_cql_priority.py  test_login_spec_quality.py
config/: datasource_judgment_rules.json  settings.ini
data/: cache_metadata.json
docs/: JSON階層フィルター機能_仕様書.md  MERMAID_PREVIEW_GUIDE.md  MERMAID_TEST.md  SPEC-DS-001 開発設計書.md  SPEC-DS-002 ハイブリッド検索システム仕様書.md  SPEC-DS-004 画面設計書.md  SPEC-DS-005 UML設計書.md  SPEC-DS-005A クラス図設計書.md  SPEC-DS-005B シーケンス図設計書.md  SPEC-DS-005C コンポーネント図設計書.md  SPEC-DS-005D アクティビティ図設計書.md  SPEC-DS-006 データベース設計書.md  SPEC-DS-007 API設計書.md  SPEC-PL-001 要件定義書.md  SPEC-PL-002 MVP開発計画書.md  SPEC-QA-001 テスト仕様書.md  SPEC-QA-002 デプロイ手順書.md  SPEC-RP-001 検索精度評価レポート.md  SPEC-RP-002 インデックス化パフォーマンス分析レポート.md  SPEC-RP-003 Phase 1.2-2.1 完了レポート.md  インデックス化パフォーマンス分析レポート.md  ドキュメント統合計画.md  ハイブリッド検索システム最終仕様書.md  仕様書作成支援ボット MVP開発計画書.md  仕様書作成支援ボット テスト仕様書.md  仕様書作成支援ボット デプロイ手順書.md  仕様書作成支援ボット 外部インターフェース設計書.md  仕様書作成支援ボット 要件定義書.md  検索精度評価レポート.md
prompts/: analysis_steps.json  response_generation.json
scripts/: build_confluence_index.py  build_test_index.py  check_confluence_url.py  detailed_connection_test.py  index_format_performance_test.py  migrate_hierarchy_data.py  quick_connection_test.py  run_connection_tests.py  run_tests.py  search_accuracy_evaluation.py  setup.py  simple_search_evaluation.py  test_atlassian_connection.py  test_current_system_connection.py  test_index_search.py  test_old_config.py  (+2 more)
(+96 files in other folders)
